Section headings are no longer partially hidden by the nav bar upon navigating to a new section

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  padding: 5% !important;
+  padding: 10% 5% 5% 5% !important;
 }
 
 .navbar-inverse {
